# hellobot

./: .env  .gitignore  README.md  email_func.py  keys.txt  old.py  old_test.py  oldbot.py  pyproject.toml  slack_bot.py
configs/: boys.yaml  credentials.yaml  email.yaml  user.yaml  userdata.yaml  users.yaml  wolf.yaml
hellobot/: main.py
hellobot/bot/: __init__.py  events.py
hellobot/endpoints/: main.py  requests.py
hellobot/entities/: __init__.py  bot.py  cred.py  email.py  user.py  userdata.py
hellobot/mail/: email.py
hellobot/responce/: chat.py  email.py
tests/: test.py  test_hellobot.py
